Clasification table implemented, fixes in admin implementation and polishing Home

--- a/app/static/Table_Fixed_Header/css/main.css
+++ b/app/static/Table_Fixed_Header/css/main.css
@@ -58,8 +58,8 @@ ul, li {
 /* ------------------------------------ */
 input {
   display: block;
-	outline: none;
-	border: none !important;
+	/* outline: none;
+	border: none !important; */
 }
 
 textarea {
