--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,7 +56,7 @@
 
   <!-- Clasification table  -->
   <!--===============================================================================================-->
-  	<link rel="stylesheet" type="text/css" href="/static/Table_Fixed_Header/vendor/perfect-scrollbar/perfect-scrollbar.css">
+  	<link rel="stylesheet" type="text/css" href="/static/vendor/perfect-scrollbar/perfect-scrollbar.css">
   <!--===============================================================================================-->
   	<link rel="stylesheet" type="text/css" href="/static/Table_Fixed_Header/css/util.css">
   	<link rel="stylesheet" type="text/css" href="/static/Table_Fixed_Header/css/main.css">
@@ -240,12 +240,13 @@
 <!-- Page level custom scripts -->
 <script src="/static/js/charts/podium.js"></script>
 
+<!-- clasification table scripts -->
 <!--===============================================================================================-->
-	<script src="/static/Table_Fixed_Header/vendor/bootstrap/js/popper.js"></script>
+	<script src="/static/vendor/bootstrap/js/popper.js"></script>
 <!--===============================================================================================-->
-	<script src="/static/Table_Fixed_Header/vendor/select2/select2.min.js"></script>
+	<script src="/static/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-	<script src="/static/Table_Fixed_Header/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+	<script src="/static/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 	<script>
 		$('.js-pscroll').each(function(){
 			var ps = new PerfectScrollbar(this);
