--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -325,7 +325,7 @@
 
           <!-- Area Chart -->
           <div class="col justify-content-center">
-            <h3 class="pb-3 text-center text-gray-800"> Top 3 </h3>
+            <h3 class="pb-3 text-center text-gray-800"> General Clasification </h3>
 
             <!-- partial:index.partial.html -->
             <div id="podium"></div>
@@ -337,7 +337,7 @@
 
       <div class="row pt-8 justify-content-center">
         <div class="col-5 justify-content-center">
-        <h3 class="pb-3 text-center text-gray-800"> General Clasification</h3>
+        <h3 class="pb-3 text-center text-gray-800"> Milestones Information</h3>
 
         <div class="table100 ver1 m-b-110">
           <div class="table100-head">
@@ -364,6 +364,7 @@
                   </tr>
 
                   {% endfor %}
+
 
                 </tbody>
               </table>
