Added clasifications to Subject and Practice and minor fixes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -238,11 +238,18 @@
 <script src="/static/vendor/chart.js/Chart.min.js"></script>
 
 <!-- Page level custom scripts -->
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js'></script>
 <script src="/static/js/charts/podium.js"></script>
+<script src="/static/js/charts/podiumSubject.js"></script>
+<script src="/static/js/charts/podiumPractice.js"></script>
+
+
 
 <!-- clasification table scripts -->
 <!--===============================================================================================-->
-	<script src="/static/vendor/bootstrap/js/popper.js"></script>
+
 <!--===============================================================================================-->
 	<script src="/static/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
