--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -165,7 +165,7 @@
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="col-8">
-          <h1 class="h3 mb-0 text-gray-800">Session {{session_a.name}}</h1>
+          <h1 class="h3 mb-0 text-gray-800">{{session_a.name}}</h1>
           <div id="session_id" value="{{session_a.id}}"></div>
         </div>
 
@@ -325,7 +325,7 @@
 
           <!-- Area Chart -->
           <div class="col justify-content-center">
-            <h3 class="pb-3 text-center text-gray-800"> General Clasification </h3>
+            <h3 class="pb-3 text-center text-gray-800"> Session Clasification </h3>
 
             <!-- partial:index.partial.html -->
             <div id="podium"></div>
@@ -400,7 +400,8 @@
 </a>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js'></script><script  src="/static/js/charts/podium.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.js'></script>
+<script  src="/static/js/charts/podium.js"></script>
 
 
 
