Added standard rendering of milestones and verification route, but not working. Minor fixes in templates.

--- a/app/templates/allSubjects.html
+++ b/app/templates/allSubjects.html
@@ -165,7 +165,7 @@
         {% endwith %}
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-          <h1 class="h3 mb-0 text-gray-800">Your Subjects</h1>
+          <h1 class="h3 mb-0 text-gray-800">All your Subjects</h1>
         </div>
 
         <!-- Content Row -->
