--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -213,7 +213,7 @@
 {% endblock body %}
 
 {% block footer%}
-
+</div>
   <!-- Footer -->
   <footer class="sticky-footer py-5 bg-black">
     <div class="container my-auto">
