--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -165,7 +165,7 @@
 
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
           <div class="col-8">
-          <h1 class="h3 mb-0 text-gray-800">Home - Actual Subjects </h1>
+          <h1 class="h3 mb-0 text-gray-800">Home - Current Subjects </h1>
           </div>
           <div class="col">
 
