--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -174,8 +174,8 @@
           <div class="dropdown">
 
             <button class="btn btn-primary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-plus mr-2"></i>
-              Create
+              <i class="fas fa-angle-down mr-2"></i>
+              Manage
             </button>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -183,14 +183,19 @@
                 <i class="fas fa-map-marker mr-2"></i>
                 Create milestone
               </button>
+              <button type="button" class="dropdown-item" data-toggle="modal" data-target="#deleteMilestone">
+                <i class="fas fa-trash mr-2"></i>
+                Delete milestone
+              </button>
+              <button type="button" class="dropdown-item" data-toggle="modal" data-target="#uploadFile">
+                <i class="fas fa-file-upload mr-2"></i>
+                Upload file for milestone
+              </button>
               <button type="button" class="dropdown-item" data-toggle="modal" data-target="#createSession">
                 <i class="fas fa-clipboard-list mr-2"></i>
                 Create session
               </button>
-              <button type="button" class="dropdown-item" data-toggle="modal" data-target="#uploadFile">
-                <i class="fas fa-clipboard-list mr-2"></i>
-                Upload file for milestone
-              </button>
+
 
             </div>
           </div>
@@ -262,6 +267,46 @@
           </div>
         </div>
         <!-- end modal Milestone -->
+        <!-- deleteMilestone Modal -->
+        <div class="modal fade" id="deleteMilestone" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" >Which milestone would you like to delete?</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+              <form action="/deleteMilestone" method="post" id="upload-form" enctype="multipart/form-data">
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                    <label> Select milestone</label><br>
+                    <select class="custom-select" name="milestone_id" id=",ilestone_id" >
+                      {% for milestone in milestones%}
+                      <option value={{milestone.id}}>{{milestone.name}}</option>
+                      {% endfor%}
+                    </select>
+
+                  </div>
+                </div>
+
+
+                <input type= "hidden" name="practice_id" value={{practice.id}}>
+
+                </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn  btn-primary">Delete</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end modal deleteMilestone -->
         <!-- uploadFile Modal -->
         <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
@@ -528,7 +573,7 @@
         {% for element in milestones%}
           <div class="col-xl-3 col-sm-6 mb-5">
             <div class="card">
-              <a href="#" class="btn btn-primary" >
+              <a href="/milestone/{{element.mode}}?milestone_id={{element.id}}" class="btn btn-primary" >
                   <span class="icon text-white-50">
                     <i class="pr-2 fas fa-map-marker"></i>
                     <b class="icon text-white">{{element.name}}</b>
