--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -522,11 +522,10 @@
 
                   <div class="row pt-2 pb-2">
                     <div class="col">
-                        <label> Rating way </label>
-                        <select class="custom-select" name="rating_way" id="rating_way" value={{practice.rating_way}}>
-                          {% for type in rating_ways%}
-                          <option value={{type}}>{{type}}</option>
-                          {% endfor%}
+                        <label> Time trial?</label>
+                        <select class="custom-select" name="time_trial" id="time_trial" value={{practice.time_trial}}>
+                          <option value=True>Yes</option>
+                          <option value=False>No</option>
                         </select>
                     </div>
                   </div>
