--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -51,8 +51,12 @@
 <li class="nav-item active">
   <a class="nav-link" href="/home">
     <i class="fas fa-fw fa-home"></i>
-    <span>Home</span></a>
+    <span>Home </span></a>
 </li>
+
+
+<!-- Divider -->
+<hr class="sidebar-divider">
 
 {% if privilege == 'admin'%}
 <!-- Divider -->
@@ -71,72 +75,28 @@
 {% endif %}
 
 
-
+{% if sidebar_content%}
+{% for element in sidebar_content%}
 <!-- Divider -->
 <hr class="sidebar-divider">
-
 <!-- Heading -->
 <div class="sidebar-heading">
-  Subjects
+  Sessions
 </div>
-
-<!-- Nav Item - Pages Collapse Menu -->
-<li class="nav-item">
-  <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-    <i class="fas fa-fw fa-cog"></i>
-    <span>Components</span>
-  </a>
-  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-    <div class="bg-white py-2 collapse-inner rounded">
-      <h6 class="collapse-header">Custom Components:</h6>
-      <a class="collapse-item" href="buttons.html">Buttons</a>
-      <a class="collapse-item" href="cards.html">Cards</a>
-    </div>
-  </div>
-</li>
-
-<!-- Nav Item - Utilities Collapse Menu -->
-<li class="nav-item">
-  <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-    <i class="fas fa-fw fa-wrench"></i>
-    <span>Utilities</span>
-  </a>
-  <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-    <div class="bg-white py-2 collapse-inner rounded">
-      <h6 class="collapse-header">Custom Utilities:</h6>
-      <a class="collapse-item" href="utilities-color.html">Colors</a>
-      <a class="collapse-item" href="utilities-border.html">Borders</a>
-      <a class="collapse-item" href="utilities-animation.html">Animations</a>
-      <a class="collapse-item" href="utilities-other.html">Other</a>
-    </div>
-  </div>
-</li>
-
-<!-- Divider -->
-<hr class="sidebar-divider">
-
-<!-- Heading -->
-<div class="sidebar-heading">
-  Addons
-</div>
-
 
 <!-- Nav Item - Charts -->
 <li class="nav-item">
-  <a class="nav-link" href="charts.html">
-    <i class="fas fa-fw fa-chart-area"></i>
-    <span>Charts</span></a>
+  <a class="nav-link" href="/session/{{element[1]}}">
+    <i class="fas fa-chalkboard"></i>
+    <span>{{element[0]}} - {{element[2]}}</span></a>
 </li>
 
-<!-- Nav Item - Tables -->
-<li class="nav-item">
-  <a class="nav-link" href="tables.html">
-    <i class="fas fa-fw fa-table"></i>
-    <span>Tables</span></a>
-</li>
+{% endfor%}
+
+{% endif%}
 
 <!-- Divider -->
-<hr class="sidebar-divider d-none d-md-block">
+<hr class="sidebar-divider">
 {% endblock sidebar_content%}
 
 
@@ -251,11 +211,10 @@
 
                 <div class="row pt-2 pb-2">
                   <div class="col">
-                      <label> Rating way </label>
-                      <select class="custom-select" name="rating_way" id="rating_way">
-                        {% for type in rating_ways%}
-                        <option value={{type}}>{{type}}</option>
-                        {% endfor%}
+                      <label> Time trial? </label>
+                      <select class="custom-select" name="time_trial" id="time_trial">
+                        <option value=true>Yes</option>
+                        <option value=false>No</option>
                       </select>
                   </div>
                 </div>
