Visual changes, CRUD models for milestone_log. Steps for fixing points

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,8 +33,8 @@
     <div class="container" id="learn-more">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="static/img/01.jpg" alt="">
+          <div class="p-5 text-center">
+            <img class="img-fluid" src="static/img/LogoLabton.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
