--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -57,8 +57,6 @@
 </li>
 
 
-<!-- Divider -->
-<hr class="sidebar-divider">
 
 {% if privilege == 'admin'%}
 <!-- Divider -->
@@ -97,8 +95,8 @@
 
 {% endif%}
 
-<!-- Divider -->
-<hr class="sidebar-divider">
+
+<br><br>
 {% endblock sidebar_content%}
 
 {% block body%}
@@ -188,6 +186,13 @@
                         <option value={{mode}}>{{mode}}</option>
                         {% endfor%}
                       </select>
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Weight (%) </label>
+                        <input class= "form-control" name="weight" type="number" min="0" max="100" step="1"/>
                   </div>
                 </div>
 
