--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,25 @@
 {% extends 'base.html' %}
 
-{% block sidebar%}
-{% endblock sidebar%}
 
+{% block nav %}
+  <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+      <div class="container">
+        <a class="navbar-brand text-white" href="/">LabTon</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse col-12" id="navbarResponsive">
+          {% block nav_content%}
+          {% endblock nav_content %}
+        </div>
+      </div>
+    </nav>
+
+{% endblock nav%}
 {% block body %}
 
-		<div class="container-login100" style="background-image: url('static/img/bg-01.jpg');">
+		<div class="container-login100" style="background-image: url('static/img/paper.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
 				{% with messages = get_flashed_messages(with_categories=true) %}
 	        {% if messages %}
