--- a/app/templates/milestoneViews/code_question.html
+++ b/app/templates/milestoneViews/code_question.html
@@ -72,13 +72,13 @@
     <span>Users</span></a>
 </li>
 
+<!-- Divider -->
 <hr class="sidebar-divider">
 {% endif %}
 
 
 {% if sidebar_content%}
 {% for element in sidebar_content%}
-<!-- Divider -->
 
 <!-- Heading -->
 <div class="sidebar-heading">
@@ -122,14 +122,49 @@
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="col-8">
-          <h1 class="h3 mb-0 text-gray-800">Template</h1>
+          {% for key,value in data.items()%}
+          {% if key=="title"%}
+          <h1 class="h3 mb-0 text-gray-800">{{value}}</h1>
+          {% endif %}
+          {% endfor %}
         </div>
       </div>
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="col">
-          <h6 class="w-wrap">Template description</h6>
+          {% for key,value in data.items()%}
+          {% if key=="description"%}
+          <h6 class="w-wrap">{{value}}</h6>
+          {% endif %}
+          {% endfor %}
         </div>
       </div>
+
+      <div class="row justify-content-center pb-4 ">
+        <div class="col justify-content-center">
+          {% for key,value in data.items()%}
+          {% if key=="question"%}
+          <h4 class="text-center">{{value}}</h4>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-5 justify-content-center">
+          <form  action="/verifyMilestone">
+            <div class="form-group">
+              <input type="text" name="answer" class ="form-control" placeholder="Answer"></input>
+              <input type="hidden" name="user_email" value="{{user.email}}"></input>
+            </div>
+
+            <button type="submit" class="btn btn-primary float-right">Send answer</button>
+          </form>
+
+        </div>
+      </div>
+
+
+
 
     </div>
     <!-- /.container-fluid -->
