--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -540,7 +540,7 @@
         {% for element in milestones%}
           <div class="col-xl-3 col-sm-6 mb-5">
             <div class="card">
-              <a href="/milestone/{{element.mode}}?milestone_id={{element.id}}" class="btn btn-primary" >
+              <a href="/milestone/{{element.id}}" class="btn btn-primary" >
                   <span class="icon text-white-50">
                     <i class="pr-2 fas fa-map-marker"></i>
                     <b class="icon text-white">{{element.name}}</b>
