--- a/app/templates/milestoneViews/feedback.html
+++ b/app/templates/milestoneViews/feedback.html
@@ -40,29 +40,51 @@
         </div>
       </div>
 
-      <div class="row justify-content-center pb-4 ">
+      <div class="row justify-content-center pb-2">
         <div class="col justify-content-center">
           {% for key,value in data.items()%}
-          {% if key=="question"%}
+          {% if key=="text1"%}
           <h4 class="text-center">{{value}}</h4>
           {% endif %}
           {% endfor %}
         </div>
       </div>
 
-      <div class="row justify-content-center">
+      <div class="row justify-content-center pb-4">
         <div class="col-5 justify-content-center">
           <form  action="/verifyMilestone">
             <div class="form-group">
-              <input type="text" name="answer" class ="form-control" placeholder="Answer"></input>
-              <input type="hidden" name="user_email" value="{{user.email}}"></input>
+              <input class= "form-control" name="rating" type="number" min="0" max="10" step="0.1" placeholder="Rating"/>
             </div>
-
-            <button type="submit" class="btn btn-primary float-right">Send answer</button>
-          </form>
-
         </div>
       </div>
+
+      <div class="row justify-content-center pb-2 ">
+        <div class="col justify-content-center">
+          {% for key,value in data.items()%}
+          {% if key=="text2"%}
+          <h4 class="text-center">{{value}}</h4>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="row justify-content-center pb-4">
+        <div class="col-5 justify-content-center">
+
+            <textarea class="form-control pb-4" name="comment" rows="6"></textarea>
+        </div>
+      </div>
+
+      <div class="row justify-content-center pb-4">
+        <div class="col-5 justify-content-center">
+          <button type="submit" class="btn btn-primary float-right">Send answer</button>
+          </form>
+        </div>
+      </div>
+
+
+
 
 
 
