Added CC license in footer, removed not used elements

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -215,9 +215,14 @@
 {% block footer%}
 </div>
   <!-- Footer -->
-  <footer class="sticky-footer py-5 bg-black">
-    <div class="container my-auto">
-      <p class="m-0 text-center text-white small copyright">Copyright &copy; UPM 2019</p>
+  <footer class="sticky-footer py-8 bg-black">
+    <div class="container my-auto justify-content-center">
+      <br>
+      <div class="text-center">
+        <a class="justify-content-center" rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+          <img class="center-block" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+          <br><br><p class="mtext-center text-white small copyright">This work is licensed under a <a rel="license" class="m-0 text-center text-white small copyright" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+      </div>
     </div>
     <!-- /.container -->
   </footer>
